native/include/alexandria_ffi.h

#define RUN_ERR_INVALID_INPUT 1
#define RUN_ERR_UNAUTHORIZED 2
#define RUN_ERR_NOT_FOUND 4
/**
 * Result of starting an index run. `run_id` is a NUL-terminated UUID string
 * on success (empty on failure).
 */
typedef struct IndexStartResult {
  int status;
  char run_id[37];
} IndexStartResult;
/**
 * Result of `alexandria_reading_list_create` (UC-26). On success `status`
 * is `READING_LIST_OK` and `json` is a NUL-terminated JSON string of the
 * `ReadingList` body — byte-for-byte the same shape HTTP returns from
 * `POST /v1/reading-lists` (FR-FC-24 / NFR-09). On failure `json` is NULL
 * and `status` carries the mapped error code. The caller must free `json`
 * with `alexandria_free_string`.
 */
typedef struct ReadingListJsonResult {
  int status;
  char *json;
} ReadingListJsonResult;
/**
 * Result of `alexandria_index_run_status_json` (UC-42). On success `status`
 * is `RUN_OK` and `json` is a NUL-terminated JSON string of the `CatalogRun`
 * body — byte-for-byte the same shape HTTP returns from
 * `GET /v1/index/runs/{runId}` (FR-FC-24 / NFR-09). On failure `json` is
 * NULL and `status` carries the mapped error code. The caller must free
 * `json` with `alexandria_free_string`.
 */
typedef struct RunJsonResult {
  int status;
  char *json;
} RunJsonResult;
/**
 * Initialize the FFI services against a database path (created/migrated on
 * demand). Safe to call again to point at a different database (replaces).
 * Returns 0 on success, a non-zero status otherwise.
 *
 * Configuration is loaded the same way `alexandria-http` loads it — from the
 * path in `ALEXANDRIA_CONFIG` (default `config.toml`), with `ALEXANDRIA_*`
 * environment overrides applied — so a setting such as the auth mode or the
 * retention window means the same thing on both surfaces (FR-FC-24 / NFR-09).
 * A missing or unreadable config file falls back to defaults rather than
 * failing, matching the HTTP binary. `db_path` wins over the config's
 * `database.path`: the embedder passed it explicitly.
 */
int alexandria_index_init(const char *db_path);
/**
 * Start an asynchronous index scan of `root`. Returns a `IndexStartResult`
 * with a `run_id` and `status` (parity with HTTP 202 body). The scan runs in
 * the background on the FFI runtime; read results via the accessor functions.
 */
struct IndexStartResult alexandria_index_start(const char *root, const char *token);
/**
 * Start an asynchronous re-index/refresh of every cataloged path (UC-02).
 * Takes only a token (no root — refresh touches everything cataloged) and
 * returns a `IndexStartResult` with a `run_id` and `status` (parity with the
 * HTTP `POST /v1/index/refresh` 202 body). The refresh runs in the background
 * on the FFI runtime; read results via the accessor functions.
 */
struct IndexStartResult alexandria_index_refresh_start(const char *token);
/**
 * Count of indexed files. For tests waiting for the background scan.
 */
int64_t alexandria_index_count_files(void);
/**
 * Count of cataloged files currently marked missing on disk (UC-02 AF-01).
 */
int64_t alexandria_index_count_missing(void);
/**
 * JSON array of `{"path","name","type","hash"}` for every indexed file, or a
 * NUL pointer on error. Caller must free it with `alexandria_free_string`.
 */
char *alexandria_index_files_json(void);
/**
 * Create a named reading list for tracking book/comic consumption (UC-26 /
 * FR-RL-01).
 *
 * `json_body` is the JSON body HTTP would send (`name`). The function
 * deserializes it, calls the same `CreateReadingListHandler` the HTTP
 * route uses, and on success serializes the returned `ReadingList` back to
 * JSON — so the FFI and HTTP surfaces agree byte-for-byte modulo key
 * ordering (parity, FR-FC-24 / NFR-09). `token` is the bearer auth token.
 */
struct ReadingListJsonResult alexandria_reading_list_create(const char *json_body,
                                                            const char *token);
/**
 * Add a book or comic to a reading list (UC-28 / FR-RL-02, FR-RL-03).
 *
 * `uuid` is the reading list's public UUID (NUL-terminated string).
 * `json_body` is the JSON body HTTP would send (`itemUuid`). The function
 * deserializes it, calls the same `AddItemToReadingListHandler` the HTTP
 * route uses, and on success serializes the returned `ReadingProgress`
 * back to JSON — so the FFI and HTTP surfaces agree byte-for-byte modulo
 * key ordering (parity, FR-FC-24 / NFR-09). `token` is the bearer auth
 * token.
 */
struct ReadingListJsonResult alexandria_reading_list_add_item(const char *uuid,
                                                              const char *json_body,
                                                              const char *token);
/**
 * Update reading progress (UC-29 / FR-RL-04, FR-RL-05).
 *
 * `reading_list_uuid` and `item_uuid` are the reading list's and item's
 * public UUIDs (NUL-terminated strings). `json_body` is the JSON body HTTP
 * would send (`state`, optional `currentIssue`/`totalIssues`). On success
 * `json` carries the updated `ReadingProgress` — byte-for-byte the same
 * shape HTTP returns from `PATCH /v1/reading-lists/{uuid}/items/{itemUuid}`
 * (parity, FR-FC-24 / NFR-09). `token` is the bearer auth token.
 */
struct ReadingListJsonResult alexandria_reading_list_update_progress(const char *reading_list_uuid,
                                                                     const char *item_uuid,
                                                                     const char *json_body,
                                                                     const char *token);
/**
 * Remove an item from a reading list (UC-30 / FR-RL-06).
 *
 * `reading_list_uuid` and `item_uuid` are the reading list's and item's
 * public UUIDs (NUL-terminated strings). On success `json` carries the
 * `readingListUuid`/`itemUuid` confirmation — byte-for-byte the same shape
 * HTTP returns from `DELETE /v1/reading-lists/{uuid}/items/{itemUuid}`
 * (parity, FR-FC-24 / NFR-09). `token` is the bearer auth token.
 */
struct ReadingListJsonResult alexandria_reading_list_remove_item(const char *reading_list_uuid,
                                                                 const char *item_uuid,
                                                                 const char *token);
/**
 * Delete a reading list (UC-31 / FR-RL-07).
 *
 * `uuid` is the reading list's public UUID (NUL-terminated string). On
 * success `json` carries the pre-delete `ReadingList` — byte-for-byte the
 * same shape HTTP returns from `DELETE /v1/reading-lists/{uuid}` (parity,
 * FR-FC-24 / NFR-09). `token` is the bearer auth token.
 */
struct ReadingListJsonResult alexandria_reading_list_delete(const char *uuid, const char *token);
/**
 * Report an index or re-index run's status and outcome (UC-42 / FR-FC-28).
 * `run_id` is the id `alexandria_index_start` or
 * `alexandria_index_refresh_start` returned. On success `json` carries the
 * same body the HTTP `GET /v1/index/runs/{runId}` route returns (FR-FC-24).
 *
 * Returns `RUN_ERR_NOT_FOUND` for an id naming no run (AF-01),
 * `RUN_ERR_UNAUTHORIZED` for an unauthenticated caller (AF-02), and
 * `RUN_ERR_INVALID_INPUT` when `run_id` is not a uuid.
 */
struct RunJsonResult alexandria_index_run_status_json(const char *run_id, const char *token);
/**
 * Free a string previously returned by an FFI accessor.
 *
 * # Safety
 *
 * `ptr` must be null, or a pointer returned by one of this library's
 * accessors and not yet freed. Passing anything else — a pointer this library
 * did not produce, or one already freed — is undefined behaviour. Declared
 * `unsafe` because that obligation is the caller's and cannot be checked here.
 */
void alexandria_free_string(char *ptr);