lib/core/bindings/alexandria_bindings.dart


  late final _alexandria_index_count_filesPtr =
      _lookup<ffi.NativeFunction<ffi.Int64 Function()>>(
        'alexandria_index_count_files',
      );
  late final _alexandria_index_count_files = _alexandria_index_count_filesPtr
      .asFunction<int Function()>();

  /// Count of cataloged files currently marked missing on disk (UC-02 AF-01).
  int alexandria_index_count_missing() {
    return _alexandria_index_count_missing();
  }

  late final _alexandria_index_count_missingPtr =
      _lookup<ffi.NativeFunction<ffi.Int64 Function()>>(
        'alexandria_index_count_missing',
      );
  late final _alexandria_index_count_missing =
      _alexandria_index_count_missingPtr.asFunction<int Function()>();

  /// JSON array of `{"path","name","type","hash"}` for every indexed file, or a
  /// NUL pointer on error. Caller must free it with `alexandria_free_string`.
  ffi.Pointer<ffi.Char> alexandria_index_files_json() {
    return _alexandria_index_files_json();
  }

  late final _alexandria_index_files_jsonPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Char> Function()>>(
        'alexandria_index_files_json',
      );
  late final _alexandria_index_files_json = _alexandria_index_files_jsonPtr
      .asFunction<ffi.Pointer<ffi.Char> Function()>();

  /// Initialize the FFI services against a database path (created/migrated on
  /// demand). Safe to call again to point at a different database (replaces).
  /// Returns 0 on success, a non-zero status otherwise.
  ///
  /// Configuration is loaded the same way `alexandria-http` loads it — from the
  /// path in `ALEXANDRIA_CONFIG` (default `config.toml`), with `ALEXANDRIA_*`
  /// environment overrides applied — so a setting such as the auth mode or the
  /// retention window means the same thing on both surfaces (FR-FC-24 / NFR-09).
  /// A missing or unreadable config file falls back to defaults rather than
  /// failing, matching the HTTP binary. `db_path` wins over the config's
  /// `database.path`: the embedder passed it explicitly.
  int alexandria_index_init(ffi.Pointer<ffi.Char> db_path) {
    return _alexandria_index_init(db_path);
  }

  late final _alexandria_index_initPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Char>)>>(
        'alexandria_index_init',
      );
  late final _alexandria_index_init = _alexandria_index_initPtr
      .asFunction<int Function(ffi.Pointer<ffi.Char>)>();

  /// Start an asynchronous re-index/refresh of every cataloged path (UC-02).
  /// Takes only a token (no root — refresh touches everything cataloged) and
  /// returns a `IndexStartResult` with a `run_id` and `status` (parity with the
  /// HTTP `POST /v1/index/refresh` 202 body). The refresh runs in the background
  /// on the FFI runtime; read results via the accessor functions.
  IndexStartResult alexandria_index_refresh_start(ffi.Pointer<ffi.Char> token) {
    return _alexandria_index_refresh_start(token);
  }

  late final _alexandria_index_refresh_startPtr =
      _lookup<
        ffi.NativeFunction<IndexStartResult Function(ffi.Pointer<ffi.Char>)>
      >('alexandria_index_refresh_start');
  late final _alexandria_index_refresh_start =
      _alexandria_index_refresh_startPtr
          .asFunction<IndexStartResult Function(ffi.Pointer<ffi.Char>)>();

  /// Report an index or re-index run's status and outcome (UC-42 / FR-FC-28).
  /// `run_id` is the id `alexandria_index_start` or
  /// `alexandria_index_refresh_start` returned. On success `json` carries the
  /// same body the HTTP `GET /v1/index/runs/{runId}` route returns (FR-FC-24).
  ///
  /// Returns `RUN_ERR_NOT_FOUND` for an id naming no run (AF-01),
  /// `RUN_ERR_UNAUTHORIZED` for an unauthenticated caller (AF-02), and
  /// `RUN_ERR_INVALID_INPUT` when `run_id` is not a uuid.
  RunJsonResult alexandria_index_run_status_json(
    ffi.Pointer<ffi.Char> run_id,
    ffi.Pointer<ffi.Char> token,
  ) {
    return _alexandria_index_run_status_json(run_id, token);
  }

  late final _alexandria_index_run_status_jsonPtr =
      _lookup<
        ffi.NativeFunction<
          RunJsonResult Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)
        >
      >('alexandria_index_run_status_json');
  late final _alexandria_index_run_status_json =
      _alexandria_index_run_status_jsonPtr
          .asFunction<
            RunJsonResult Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)
          >();

  /// Start an asynchronous index scan of `root`. Returns a `IndexStartResult`
  /// with a `run_id` and `status` (parity with HTTP 202 body). The scan runs in
  /// the background on the FFI runtime; read results via the accessor functions.
  IndexStartResult alexandria_index_start(
    ffi.Pointer<ffi.Char> root,
    ffi.Pointer<ffi.Char> token,
  ) {
    return _alexandria_index_start(root, token);
  }

  late final _alexandria_index_startPtr =
      _lookup<
        ffi.NativeFunction<
          IndexStartResult Function(
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
          )
        >
      >('alexandria_index_start');
  late final _alexandria_index_start = _alexandria_index_startPtr
      .asFunction<
        IndexStartResult Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)
      >();

  /// Add a book or comic to a reading list (UC-28 / FR-RL-02, FR-RL-03).
  ///
  /// `uuid` is the reading list's public UUID (NUL-terminated string).
  /// `json_body` is the JSON body HTTP would send (`itemUuid`). The function
  /// deserializes it, calls the same `AddItemToReadingListHandler` the HTTP
  /// route uses, and on success serializes the returned `ReadingProgress`
  /// back to JSON — so the FFI and HTTP surfaces agree byte-for-byte modulo
  /// key ordering (parity, FR-FC-24 / NFR-09). `token` is the bearer auth
  /// token.
  ReadingListJsonResult alexandria_reading_list_add_item(
    ffi.Pointer<ffi.Char> uuid,
    ffi.Pointer<ffi.Char> json_body,
    ffi.Pointer<ffi.Char> token,
  ) {
    return _alexandria_reading_list_add_item(uuid, json_body, token);
  }

  late final _alexandria_reading_list_add_itemPtr =
      _lookup<
        ffi.NativeFunction<
          ReadingListJsonResult Function(
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
          )
        >
      >('alexandria_reading_list_add_item');
  late final _alexandria_reading_list_add_item =
      _alexandria_reading_list_add_itemPtr
          .asFunction<
            ReadingListJsonResult Function(
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
            )
          >();

  /// Create a named reading list for tracking book/comic consumption (UC-26 /
  /// FR-RL-01).
  ///
  /// `json_body` is the JSON body HTTP would send (`name`). The function
  /// deserializes it, calls the same `CreateReadingListHandler` the HTTP
  /// route uses, and on success serializes the returned `ReadingList` back to
  /// JSON — so the FFI and HTTP surfaces agree byte-for-byte modulo key
  /// ordering (parity, FR-FC-24 / NFR-09). `token` is the bearer auth token.
  ReadingListJsonResult alexandria_reading_list_create(
    ffi.Pointer<ffi.Char> json_body,
    ffi.Pointer<ffi.Char> token,
  ) {
    return _alexandria_reading_list_create(json_body, token);
  }

  late final _alexandria_reading_list_createPtr =
      _lookup<
        ffi.NativeFunction<
          ReadingListJsonResult Function(
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
          )
        >
      >('alexandria_reading_list_create');
  late final _alexandria_reading_list_create =
      _alexandria_reading_list_createPtr
          .asFunction<
            ReadingListJsonResult Function(
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
            )
          >();

  /// Delete a reading list (UC-31 / FR-RL-07).
  ///
  /// `uuid` is the reading list's public UUID (NUL-terminated string). On
  /// success `json` carries the pre-delete `ReadingList` — byte-for-byte the
  /// same shape HTTP returns from `DELETE /v1/reading-lists/{uuid}` (parity,
  /// FR-FC-24 / NFR-09). `token` is the bearer auth token.
  ReadingListJsonResult alexandria_reading_list_delete(
    ffi.Pointer<ffi.Char> uuid,
    ffi.Pointer<ffi.Char> token,
  ) {
    return _alexandria_reading_list_delete(uuid, token);
  }

  late final _alexandria_reading_list_deletePtr =
      _lookup<
        ffi.NativeFunction<
          ReadingListJsonResult Function(
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
          )
        >
      >('alexandria_reading_list_delete');
  late final _alexandria_reading_list_delete =
      _alexandria_reading_list_deletePtr
          .asFunction<
            ReadingListJsonResult Function(
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
            )
          >();

  /// Remove an item from a reading list (UC-30 / FR-RL-06).
  ///
  /// `reading_list_uuid` and `item_uuid` are the reading list's and item's
  /// public UUIDs (NUL-terminated strings). On success `json` carries the
  /// `readingListUuid`/`itemUuid` confirmation — byte-for-byte the same shape
  /// HTTP returns from `DELETE /v1/reading-lists/{uuid}/items/{itemUuid}`
  /// (parity, FR-FC-24 / NFR-09). `token` is the bearer auth token.
  ReadingListJsonResult alexandria_reading_list_remove_item(
    ffi.Pointer<ffi.Char> reading_list_uuid,
    ffi.Pointer<ffi.Char> item_uuid,
    ffi.Pointer<ffi.Char> token,
  ) {
    return _alexandria_reading_list_remove_item(
      reading_list_uuid,
      item_uuid,
      token,
    );
  }

  late final _alexandria_reading_list_remove_itemPtr =
      _lookup<
        ffi.NativeFunction<
          ReadingListJsonResult Function(
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
          )
        >
      >('alexandria_reading_list_remove_item');
  late final _alexandria_reading_list_remove_item =
      _alexandria_reading_list_remove_itemPtr
          .asFunction<
            ReadingListJsonResult Function(
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
            )
          >();

  /// Update reading progress (UC-29 / FR-RL-04, FR-RL-05).
  ///
  /// `reading_list_uuid` and `item_uuid` are the reading list's and item's
  /// public UUIDs (NUL-terminated strings). `json_body` is the JSON body HTTP
  /// would send (`state`, optional `currentIssue`/`totalIssues`). On success
  /// `json` carries the updated `ReadingProgress` — byte-for-byte the same
  /// shape HTTP returns from `PATCH /v1/reading-lists/{uuid}/items/{itemUuid}`
  /// (parity, FR-FC-24 / NFR-09). `token` is the bearer auth token.
  ReadingListJsonResult alexandria_reading_list_update_progress(
    ffi.Pointer<ffi.Char> reading_list_uuid,
    ffi.Pointer<ffi.Char> item_uuid,
    ffi.Pointer<ffi.Char> json_body,
    ffi.Pointer<ffi.Char> token,
  ) {
    return _alexandria_reading_list_update_progress(
      reading_list_uuid,
      item_uuid,
      json_body,
      token,
    );
  }

  late final _alexandria_reading_list_update_progressPtr =
      _lookup<
        ffi.NativeFunction<
          ReadingListJsonResult Function(
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
          )
        >
      >('alexandria_reading_list_update_progress');
  late final _alexandria_reading_list_update_progress =
      _alexandria_reading_list_update_progressPtr
          .asFunction<
            ReadingListJsonResult Function(
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
            )
          >();
